feat: add title to youtube player

--- a/_includes/youtube-player.html
+++ b/_includes/youtube-player.html
@@ -1,7 +1,9 @@
 <!-- https://thisisa.blog/how-to-embed-media-github-pages#youtube -->
-<iframe src="https://www.youtube.com/embed/{{ include.id }}" 
-    width="560" 
-    height="315"
-    frameborder="0" 
-    allowfullscreen>
+<iframe
+  src="https://www.youtube.com/embed/{{ include.id }}" 
+  title="{{ include.title }}"
+  width="560" 
+  height="315"
+  frameborder="0" 
+  allowfullscreen>
 </iframe>
